[metadata]
name = unittest_example
summary = Python UnitTest Example
author = ZouMingzhe
home-page = http://www.github.com/
classifier =
    Programming Language :: Python

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    unittest_example

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0


[wheel]
universal = 1
